fix particle z-index

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a:hover {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	/* z-index: -1; */
+	z-index: -1;
 }
 
 #visiting-card {
